syntax = "proto3";
package Aevatar.Agents;

import "google/protobuf/any.proto";

message MessageEnvelope {
  string id = 1;
  int64 timestamp = 2;
  google.protobuf.Any payload = 3;  // 业务Agent解析
}

message EventEnvelope {
  string id = 1;
  int64 timestamp = 2;
  int64 version = 3;  // 事件版本号
  google.protobuf.Any payload = 4;  // 事件Payload
}

message SubAgentAdded {
  string sub_agent_id = 1;
}

message SubAgentRemoved {
  string sub_agent_id = 1;
}

message LLMEvent {
  string prompt = 1;
  string response = 2;
}

message GeneralConfigEvent {
  string config_key = 1;
  string config_value = 2;
}

message CodeValidationEvent {
  string code = 1;
  bool result = 2;
}

message LLMAgentState {
  repeated string sub_agent_ids = 1;
  int64 current_version = 2;
  string llm_config = 3;
}

message CodingAgentState {
  repeated string sub_agent_ids = 1;
  int64 current_version = 2;
  string validation_history = 3;
}